# node-swc

./: .browserslistrc  .gitignore  .gitmodules  .npmignore  .travis.yml  README.md  appveyor.yml  package-lock.json  package.json  tsconfig.json  types.d.ts
.cargo/: config
.github/workflows/: release.yml
__tests__/: api_test.js  import_test.js  module_test.js  optimizer_test.js  usage_test.js
__tests__/env/: env_test.js
__tests__/parse/: api_test.js
__tests__/transform/: api_test.js  issue-439-test.js  issue-441-test.js  issue-446-test.js  optimizer_test.js  plugin.js  plugin_test.js  sourcemap_test.js
benches/: multicore.js  plugin.js  transform.js  typescript.js
example/: package.json
issue-225/: input.js
issue-226/: .swcrc
lib/: Visitor.ts  index.d.ts  index.js  types.ts  util.d.ts  util.js
native/: .rustfmt.toml  Cargo.toml  build.rs
native/src/: config.rs  error.rs  lib.rs
pkgs/node-swc/: package.json
pkgs/node-swc/scripts/util/: proxy.js
scripts/: build-wasm.sh  install.js  tag.sh  update.sh
scripts/ci/: build-github.sh  build.sh  settings.txt
scripts/ci/linux/: Dockerfile  build.sh  start-docker.sh
scripts/ci/linux-musl/: Dockerfile  build.sh  start-docker.sh
scripts/util/: downloadoptions.js  proxy.js  useragent.js
src/: Visitor.ts  ast.ts  extensions.js  index.ts  printer.ts  types.ts  util.ts  visitor.ts
src/printer/: index.ts  list.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
