[workspace]

[package]
name = "ffi"
version = "0.1.0"
authors = ["강동윤 <kdy1@outlook.kr>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "ffi"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
fxhash = "0.2.1"
neon = "0.3.1"
neon-serde = "0.3.0"
failure = "0.1"
path-clean = "0.1"
lazy_static = "1"
hashbrown = "0.5"
swc = { git = "https://github.com/swc-project/swc.git" }

[profile.bench]
lto = true

[profile.release]
lto = true
codegen-units = 1
