[workspace]

[package]
name = "ffi"
version = "0.1.0"
authors = ["강동윤 <kdy1@outlook.kr>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "ffi"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
serde_json = "1"
neon = "0.3.3"
neon-serde = "0.3.0"
path-clean = "0.1"
swc = { git = "https://github.com/swc-project/swc.git" }
serde = { version = "1", features = ["derive"] }

[profile.bench]
lto = true

[profile.release]
lto = "thin"
codegen-units = 1
