[package]
name = "swc-wasm"
version = "0.1.0"
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]


[dependencies]
serde_json = "1"
neon = "0.3.3"
neon-serde = "0.3.0"
path-clean = "0.1"
swc = { git = "https://github.com/swc-project/swc.git" }
serde = { version = "1", features = ["derive"] }

[profile.bench]
lto = true

[profile.release]
# lto = true
codegen-units = 1
