[package]
name = "swc-wasm"
version = "0.1.0"
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]


[dependencies]
serde_json = "1"
once_cell = "1.3.1"
path-clean = "0.1"
swc = { git = "https://github.com/swc-project/swc.git" }
serde = { version = "1", features = ["derive"] }

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[profile.bench]
lto = true

[profile.release]
lto = true
codegen-units = 1
